--- a/css/estilos.css
+++ b/css/estilos.css
@@ -7,19 +7,6 @@ body
     margin: 0;
     padding: 0;
 }
-#container
-{
-    width: 70%;
-    padding: 1em;
-    text-align: left;
-    border: 1px solid #DDD;
-    margin: 0 auto;
-}
-#container h1
-{
-    font-size: 20px;
-}
-
 #cabecera
 {
     background: #33A;
@@ -35,3 +22,28 @@ body
     font-weight: normal;
     font-size: 0 8em;
 }
+#container
+{
+    width: 70%;
+    padding: 1em;
+    text-align: left;
+    border: 1px solid #DDD;
+    margin: 0 auto;
+}
+#container h1
+{
+    font-size: 20px;
+}
+#post
+{
+    padding: 1em;
+}
+#footer
+{
+    background: #777;
+    color: white;
+    text-align: center;
+    padding: 0.5em;
+}
+
+
